--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "scheduler": "npm run build && node dist/index-scheduler.js",
     "scheduler:dev": "ts-node src/index-scheduler.ts",
     "import:history": "npm run build && node dist/scripts/importHistory.js",
-    "import:history:dev": "ts-node src/scripts/importHistory.ts"
+    "import:history:dev": "ts-node src/scripts/importHistory.ts",
+    "import:history:pg": "npm run build && node dist/scripts/importHistoryPg.js",
+    "import:history:pg:dev": "ts-node src/scripts/importHistoryPg.ts"
   },
   "keywords": [
     "scraper",
@@ -29,12 +31,15 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "dotenv": "^17.2.3",
     "node-cron": "^3.0.3",
+    "pg": "^8.16.3",
     "playwright": "^1.40.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.16.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
