feat: IntegraciÃ³n de logging de predicciones IA y Protocolo Lyra completo
- Agregada funciÃ³n logAIVeredicto en supabase-client.ts para guardar predicciones de IA
- Creada tabla ai_predictions.sql para auditorÃ­a de precisiÃ³n del motor
- Integrado logging automÃ¡tico en el motor despuÃ©s del veredicto del Juez Final
- Agregado script analisis-protocolo-lyra.ts como punto de salida definitivo
- Corregido modelo de Gemini en AIPredictor.ts (gemini-1.5-pro)
- Agregada funciÃ³n actualizarResultadoReal para calcular aciertos
- Mejorado mostrarResultadoFinal para mostrar veredicto completo
- Agregados nuevos scripts npm para anÃ¡lisis completo

--- a/package.json
+++ b/package.json
@@ -23,7 +23,21 @@
     "analisis:recalibrado": "npm run build && node dist/engine/analisis-recalibrado.js",
     "analisis:recalibrado:dev": "ts-node src/engine/analisis-recalibrado.ts",
     "analisis:modulos": "npm run build && node dist/engine/ejemplo-modulos-avanzados.js",
-    "analisis:modulos:dev": "ts-node src/engine/ejemplo-modulos-avanzados.ts"
+    "analisis:modulos:dev": "ts-node src/engine/ejemplo-modulos-avanzados.ts",
+    "analisis:lyra": "npm run build && node dist/engine/analisis-completo-lyra.js",
+    "analisis:lyra:dev": "ts-node src/engine/analisis-completo-lyra.ts",
+    "analisis:optimizar": "npm run build && node dist/engine/optimizacion-score.js",
+    "analisis:optimizar:dev": "ts-node src/engine/optimizacion-score.ts",
+    "analisis:final": "npm run build && node dist/engine/analisis-final-optimizado.js",
+    "analisis:final:dev": "ts-node src/engine/analisis-final-optimizado.ts",
+    "analisis:gemini": "npm run build && node dist/engine/analisis-con-gemini.js",
+    "analisis:gemini:dev": "ts-node src/engine/analisis-con-gemini.ts",
+    "analisis:juez": "npm run build && node dist/engine/analisis-juez-final.js",
+    "analisis:juez:dev": "ts-node src/engine/analisis-juez-final.ts",
+    "analisis:lyra-completo": "npm run build && node dist/engine/analisis-protocolo-lyra.js",
+    "analisis:lyra-completo:dev": "ts-node src/engine/analisis-protocolo-lyra.ts",
+    "analisis:protocolo": "npm run build && node dist/engine/analisis-protocolo-lyra.js",
+    "analisis:protocolo:dev": "ts-node src/engine/analisis-protocolo-lyra.ts"
   },
   "keywords": [
     "scraper",
@@ -36,6 +50,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.89.0",
     "dotenv": "^17.2.3",
     "node-cron": "^3.0.3",
