--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "dotenv": "^17.2.3",
+    "groq-sdk": "^0.37.0",
     "node-cron": "^3.0.3",
+    "p-limit": "^7.2.0",
     "pg": "^8.16.3",
-    "playwright": "^1.40.0"
+    "playwright": "^1.40.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
