Limpieza de cÃ³digo: eliminar archivos no utilizados y corregir errores de async/await
- Eliminados archivos no utilizados:
  - verificar-predicciones.ts (script de prueba temporal)
  - app/lib/test-supabase.ts (archivo de prueba no importado)
  - app/components/error-boundary.tsx (componente no utilizado)

- Corregidos errores de async/await en:
  - src/engine/analisis-completo-lyra.ts
  - src/engine/analisis-final-optimizado.ts
  - src/engine/optimizacion-score.ts
  - src/engine/ejemplo-modulos-avanzados.ts

- Build del frontend verificado y funcionando correctamente

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scraper para extraer todos los resultados del Quini 6 del año 2025",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.backend.json",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "scrape": "npm run build && npm run start",
@@ -18,6 +18,8 @@
     "import:history:dev": "ts-node src/scripts/importHistory.ts",
     "import:history:pg": "npm run build && node dist/scripts/importHistoryPg.js",
     "import:history:pg:dev": "ts-node src/scripts/importHistoryPg.ts",
+    "setup:database": "npm run build && node dist/scripts/setupDatabase.js",
+    "setup:database:dev": "ts-node src/scripts/setupDatabase.ts",
     "analisis:prueba": "npm run build && node dist/engine/analisis-prueba.js",
     "analisis:prueba:dev": "ts-node src/engine/analisis-prueba.ts",
     "analisis:recalibrado": "npm run build && node dist/engine/analisis-recalibrado.js",
@@ -31,11 +33,15 @@
     "analisis:final": "npm run build && node dist/engine/analisis-final-optimizado.js",
     "analisis:final:dev": "ts-node src/engine/analisis-final-optimizado.ts",
     "analisis:juez": "npm run build && node dist/engine/analisis-juez-final.js",
-    "analisis:juez:dev": "ts-node src/engine/analisis-juez-final.ts",
+    "analisis:juez:dev": "ts-node --project tsconfig.backend.json src/engine/analisis-juez-final.ts",
     "analisis:lyra-completo": "npm run build && node dist/engine/analisis-protocolo-lyra.js",
     "analisis:lyra-completo:dev": "ts-node src/engine/analisis-protocolo-lyra.ts",
     "analisis:protocolo": "npm run build && node dist/engine/analisis-protocolo-lyra.js",
-    "analisis:protocolo:dev": "ts-node src/engine/analisis-protocolo-lyra.ts"
+    "analisis:protocolo:dev": "ts-node src/engine/analisis-protocolo-lyra.ts",
+    "dev:frontend": "next dev",
+    "build:frontend": "next build",
+    "start:frontend": "next start",
+    "lint": "next lint"
   },
   "keywords": [
     "scraper",
@@ -49,18 +55,33 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "@tanstack/react-query": "^5.56.2",
     "dotenv": "^17.2.3",
+    "framer-motion": "^11.3.24",
     "groq-sdk": "^0.37.0",
+    "next": "^15.0.3",
     "node-cron": "^3.0.3",
     "p-limit": "^7.2.0",
     "pg": "^8.16.3",
     "playwright": "^1.40.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.0.3",
+    "postcss": "^8.4.47",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
