--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,21 @@ dist/
 data/
 *.log
 .env
+.env.local
+.env*.local
 .DS_Store
 *.tsbuildinfo
 
+# Next.js
+.next/
+out/
+build/
+.vercel
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
